# kindle-clippings-page

./: README.md  clippings.py  functions.js  index.html  pyproject.toml  styles.css
src/: clippings.py  functions.js  index.html  mobile-styles.css  styles.css
