[project]
name = "kindle-clippings-page"
version = "1.0.0"
description = "A tool to parse Kindle's My Clippings.txt file and generate a beautiful HTML page"
authors = [{name = "Unknown"}]
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
    "pendulum>=3.1.0",
]
requires-python = ">=3.12"
[project.scripts]
clippings = "clippings:run"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
